--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,11 @@
 Fixa så att typecheckern returnerar ett type-annotated tree.
 
 Kolla att return funkar som det ska (se s. 7 och bad008.jl), kolla if.
+
+När koden kompillerar:
+    ¤ Kolla om vi kan importa Preluce som qualified och byta ut Prelude mot P i
+      Prelude.map-anropet
+    ¤ Skriv trevliga kommentarer
+    ¤ check if @ is ok to use
+    ¤ Kolla om vi kan använda <- om det är en Err-grej, oavsett argument till Err.
+      Isf kan vi snygga till koden på många ställen!
