--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,11 @@
 Kolla att return funkar som det ska (se s. 7 och bad008.jl), kolla if.
 
 Skriv trevliga kommentarer till funktionerna
+
+
+Frågor
+------
+¤ Skall vi kolla att det finns en mainmetod i labb A? I.s.f. i TC?
+¤ Skall vi kolla att det finns returnstatements där det bör i labb A?
+  Annars borde väl bad008 vara ok?
+¤ Hur ska alla submissionfiler se ut på submission A?
