--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,8 @@ TODO
 ----
 ¤ Grammarn har tre unused rules. Ta bort dem?
 
+¤ Lägg till internal String-type/exp.
+
 ¤ Kolla att return funkar som det ska (se s. 7 och bad008.jl), kolla if.
   (Kolla detta efter tc?)
 
@@ -44,3 +46,6 @@ Frågor
   
   
 Make ska bygga kompilatorn. Ska inte köra saker, bara bygga. Skall bygga kompilatorn.
+
+Grade anropar jlc för varje testfil. jlc skall då anropa Main, som i sin tur
+anropar TC och sedan skriver ut meddelande som Grade läser.
